CM_Website_HTML: fix slider gap issue

--- a/CM_Website_HTML/css/styles.css
+++ b/CM_Website_HTML/css/styles.css
@@ -38108,9 +38108,9 @@ main
     background-color: #be9f56;
 }
 
-.banner-carousel .owl-item
+.banner-carousel .item
 {
-    margin-left: 1px;
+    width: calc(100% + 3px);
 }
 
 .banner-carousel .owl-dots
