--- a/CM_Website_HTML/src/_scss/myCustomStyle/_customStyle.scss
+++ b/CM_Website_HTML/src/_scss/myCustomStyle/_customStyle.scss
@@ -136,7 +136,10 @@
 
 .banner-carousel {
   .owl-item {
-    margin-left: 1px;
+    // margin-left: 3px;
+  }
+  .item {
+    width: calc(100% + 3px);
   }
   .owl-dots {
     position: absolute;
